Update lists at 20240226-0301

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -33,6 +33,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -371,7 +372,6 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
