--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -151,6 +151,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 156.146.63.135;
 allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.241.121.139;
@@ -227,6 +228,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.235.106.195;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -703,6 +705,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -1138,7 +1141,6 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1371,7 +1373,6 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
-allow 31.129.22.65;
 allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
@@ -1485,8 +1486,8 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.3.130.9;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1630,6 +1631,7 @@ allow 91.132.144.59;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
