--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -151,6 +151,7 @@ deny 149.56.44.47;
 deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
+deny 156.146.63.135;
 deny 160.119.249.240;
 deny 161.35.129.51;
 deny 162.241.121.139;
@@ -227,6 +228,7 @@ deny 179.43.159.78;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
+deny 18.235.106.195;
 deny 184.105.48.40;
 deny 184.75.221.163;
 deny 185.100.85.132;
@@ -703,6 +705,7 @@ deny 2001:678:e3c::a;
 deny 2001:678:e3c::b;
 deny 2001:678:e3c::c;
 deny 2001:678:e3c::d;
+deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -1138,7 +1141,6 @@ deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
-deny 2a05:541:112:31::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
@@ -1371,7 +1373,6 @@ deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:8641:3:38::;
 deny 2a12:a800:2:1:45:138:16:203;
-deny 31.129.22.65;
 deny 31.13.189.118;
 deny 31.220.87.46;
 deny 31.220.98.139;
@@ -1485,8 +1486,8 @@ deny 51.89.138.51;
 deny 51.89.153.112;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.3.130.9;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1630,6 +1631,7 @@ deny 91.132.144.59;
 deny 91.203.144.194;
 deny 91.203.5.115;
 deny 91.203.5.118;
+deny 91.206.26.26;
 deny 91.208.197.144;
 deny 91.208.75.153;
 deny 91.208.75.156;
