--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -151,6 +151,7 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 156.146.63.135;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.241.121.139;
@@ -227,6 +228,7 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.235.106.195;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -703,6 +705,7 @@ set_real_ip_from 2001:678:e3c::a;
 set_real_ip_from 2001:678:e3c::b;
 set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
+set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -1138,7 +1141,6 @@ set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:66;
 set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:99;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
-set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -1371,7 +1373,6 @@ set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
-set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.189.118;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
@@ -1485,8 +1486,8 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.3.130.9;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1630,6 +1631,7 @@ set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.5.115;
 set_real_ip_from 91.203.5.118;
+set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
