--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -75,7 +75,6 @@ set_real_ip_from 107.189.31.225;
 set_real_ip_from 107.189.31.232;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
-set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
@@ -85,6 +84,7 @@ set_real_ip_from 107.189.7.48;
 set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
+set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
@@ -186,7 +186,6 @@ set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.131.168;
 set_real_ip_from 172.81.131.84;
-set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
 set_real_ip_from 173.237.206.68;
@@ -194,6 +193,7 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.255.215;
 set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -969,6 +969,7 @@ set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
+set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -1371,7 +1372,6 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.13.189.118;
-set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
 set_real_ip_from 35.0.127.52;
@@ -1386,7 +1386,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.120.64;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.222.15.208;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
@@ -1524,6 +1523,7 @@ set_real_ip_from 54.36.101.21;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 54.87.102.240;
 set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
@@ -1627,7 +1627,6 @@ set_real_ip_from 89.58.41.251;
 set_real_ip_from 89.58.63.200;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.203.144.194;
-set_real_ip_from 91.203.5.115;
 set_real_ip_from 91.203.5.118;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
@@ -1690,4 +1689,5 @@ set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
