--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -45,7 +45,6 @@ allow 104.244.79.61;
 allow 107.172.13.143;
 allow 107.172.31.146;
 allow 107.172.31.165;
-allow 107.174.138.172;
 allow 107.174.231.197;
 allow 107.189.10.141;
 allow 107.189.10.175;
@@ -275,6 +274,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
@@ -876,6 +876,7 @@ allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
+allow 23.22.126.155;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1143,6 +1144,7 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1159,6 +1161,7 @@ allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
+allow 2a06:1700:0:50::11;
 allow 2a06:1700:1::11;
 allow 2a06:1700:1:1a::1;
 allow 2a06:1700:1:2a::7;
@@ -1374,12 +1377,11 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
+allow 31.129.22.65;
 allow 31.13.189.118;
-allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
 allow 35.0.127.52;
-allow 35.174.246.185;
 allow 37.120.166.23;
 allow 37.187.5.192;
 allow 37.228.129.128;
@@ -1493,7 +1495,6 @@ allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1542,7 +1543,6 @@ allow 64.5.123.66;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
-allow 70.53.133.193;
 allow 71.19.144.106;
 allow 71.19.148.129;
 allow 72.14.179.10;
@@ -1557,7 +1557,6 @@ allow 77.232.143.248;
 allow 77.232.143.255;
 allow 77.48.28.204;
 allow 77.48.28.236;
-allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.85.147;
@@ -1577,6 +1576,7 @@ allow 81.17.28.95;
 allow 81.19.137.127;
 allow 82.118.242.158;
 allow 82.118.242.16;
+allow 82.153.138.120;
 allow 82.153.138.48;
 allow 82.153.138.79;
 allow 82.197.182.161;
@@ -1635,8 +1635,6 @@ allow 89.58.41.251;
 allow 89.58.63.200;
 allow 91.132.144.59;
 allow 91.203.144.194;
-allow 91.203.5.115;
-allow 91.203.5.118;
 allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
