--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -372,6 +372,7 @@ set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:66;
 set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:99;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
+set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -388,6 +389,7 @@ set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
+set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:1::11;
 set_real_ip_from 2a06:1700:1:1a::1;
 set_real_ip_from 2a06:1700:1:2a::7;
