--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -45,6 +45,7 @@ allow 104.244.79.61;
 allow 107.172.13.143;
 allow 107.172.31.146;
 allow 107.172.31.165;
+allow 107.174.138.172;
 allow 107.174.231.197;
 allow 107.189.10.141;
 allow 107.189.10.175;
@@ -92,7 +93,6 @@ allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
-allow 109.107.190.171;
 allow 109.169.33.163;
 allow 109.201.133.100;
 allow 109.69.67.17;
@@ -281,7 +281,6 @@ allow 185.174.136.114;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.181.61.18;
-allow 185.183.107.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -501,7 +500,6 @@ allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
-allow 185.31.210.24;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -793,6 +791,7 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
+allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.194.29.4;
 allow 204.8.156.142;
@@ -876,7 +875,6 @@ allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
-allow 23.22.126.155;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1078,6 +1076,7 @@ allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1364,7 +1363,6 @@ allow 2a12:5940:144f::2;
 allow 2a12:5940:4462::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:53f7::2;
-allow 2a12:5940:7515::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
@@ -1378,7 +1376,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
-allow 31.13.189.118;
+allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
 allow 35.0.127.52;
@@ -1389,8 +1387,8 @@ allow 37.228.129.131;
 allow 37.228.129.24;
 allow 37.228.129.63;
 allow 37.48.120.196;
-allow 37.48.120.64;
 allow 37.48.70.156;
+allow 38.242.239.62;
 allow 38.97.116.244;
 allow 45.128.232.102;
 allow 45.128.232.170;
@@ -1488,6 +1486,7 @@ allow 51.38.81.135;
 allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
+allow 51.81.254.15;
 allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.138.51;
@@ -1520,6 +1519,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.71.119.209;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
@@ -1575,7 +1575,6 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.19.137.127;
 allow 82.118.242.158;
-allow 82.118.242.16;
 allow 82.153.138.120;
 allow 82.153.138.48;
 allow 82.153.138.79;
@@ -1601,13 +1600,12 @@ allow 84.54.51.69;
 allow 85.204.116.139;
 allow 85.204.116.211;
 allow 85.204.116.88;
-allow 85.209.176.103;
 allow 85.215.76.62;
 allow 85.235.145.205;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 87.118.110.27;
-allow 87.118.115.44;
+allow 87.118.114.44;
 allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
