--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 101.99.84.87;
 allow 102.130.113.9;
 allow 102.130.127.117;
 allow 103.106.3.94;
@@ -112,7 +111,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
 allow 118.163.74.160;
-allow 124.217.247.210;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -879,6 +877,7 @@ allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
+allow 23.23.8.148;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1359,6 +1358,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1382,7 +1382,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.227;
-allow 34.204.155.60;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1648,6 +1647,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1671,6 +1671,7 @@ allow 93.99.104.128;
 allow 93.99.104.18;
 allow 94.102.51.15;
 allow 94.103.124.184;
+allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.158.246.240;
