--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,7 +122,6 @@ allow 135.125.205.25;
 allow 135.125.55.237;
 allow 136.244.111.163;
 allow 138.128.222.68;
-allow 138.201.203.206;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
@@ -216,7 +215,6 @@ allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
 allow 179.43.128.16;
-allow 179.43.134.18;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
@@ -460,7 +458,6 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
-allow 185.225.226.77;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
@@ -641,7 +638,6 @@ allow 195.80.151.30;
 allow 195.88.74.206;
 allow 196.189.30.114;
 allow 198.144.178.163;
-allow 198.167.193.135;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -810,7 +806,6 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 208.109.215.188;
 allow 208.109.36.224;
-allow 209.133.210.2;
 allow 209.141.46.203;
 allow 209.141.50.178;
 allow 209.141.51.180;
@@ -820,7 +815,6 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
-allow 212.51.128.10;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
@@ -873,6 +867,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -894,6 +889,7 @@ allow 2.58.95.59;
 allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
+allow 2602:2e5::104;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -1022,6 +1018,7 @@ allow 2a00:1169:117:5510::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:1d1f:b701;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1355,6 +1352,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1377,15 +1375,16 @@ allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
-allow 31.42.185.227;
+allow 34.204.23.233;
 allow 35.0.127.52;
-allow 35.169.183.23;
 allow 37.120.166.23;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.24;
 allow 37.228.129.63;
+allow 37.252.254.33;
+allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
@@ -1459,11 +1458,6 @@ allow 45.95.169.255;
 allow 45.95.169.99;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.183.222.180;
-allow 46.183.222.181;
-allow 46.183.222.183;
-allow 46.183.222.184;
-allow 46.183.222.185;
 allow 46.195.112.152;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1537,7 +1531,6 @@ allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
-allow 62.182.82.143;
 allow 62.182.84.146;
 allow 64.5.123.66;
 allow 66.146.193.33;
@@ -1645,6 +1638,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1671,7 +1665,6 @@ allow 94.103.124.184;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
-allow 94.158.246.240;
 allow 94.16.112.22;
 allow 94.16.116.81;
 allow 94.16.121.226;
@@ -1690,7 +1683,6 @@ allow 95.128.43.164;
 allow 95.141.35.21;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.154.196.24;
 allow 95.164.46.204;
 allow 95.211.210.103;
 allow 95.211.244.28;
