--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -125,6 +125,7 @@ allow 2402:1f00:8100:400::9;
 allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
+allow 2602:2e5::104;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -252,6 +253,7 @@ allow 2a00:1169:117:5510::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:1d1f:b701;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -585,6 +587,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
