--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -122,7 +122,6 @@ set_real_ip_from 135.125.205.25;
 set_real_ip_from 135.125.55.237;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.128.222.68;
-set_real_ip_from 138.201.203.206;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
@@ -216,7 +215,6 @@ set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
 set_real_ip_from 178.236.247.122;
 set_real_ip_from 179.43.128.16;
-set_real_ip_from 179.43.134.18;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
 set_real_ip_from 179.43.159.196;
@@ -460,7 +458,6 @@ set_real_ip_from 185.220.103.6;
 set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
-set_real_ip_from 185.225.226.77;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
@@ -641,7 +638,6 @@ set_real_ip_from 195.80.151.30;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.189.30.114;
 set_real_ip_from 198.144.178.163;
-set_real_ip_from 198.167.193.135;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -810,7 +806,6 @@ set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
-set_real_ip_from 209.133.210.2;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
 set_real_ip_from 209.141.51.180;
@@ -820,7 +815,6 @@ set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
-set_real_ip_from 212.51.128.10;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
@@ -873,6 +867,7 @@ set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
@@ -894,6 +889,7 @@ set_real_ip_from 2.58.95.59;
 set_real_ip_from 2600:3c00:e000:4ee::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:4441::1;
@@ -1022,6 +1018,7 @@ set_real_ip_from 2a00:1169:117:5510::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
+set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:f:f:f:f:1d1f:b701;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
@@ -1355,6 +1352,7 @@ set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:1fc0:3::4289:69b8;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1377,15 +1375,16 @@ set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 31.42.185.227;
+set_real_ip_from 34.204.23.233;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.169.183.23;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.131;
 set_real_ip_from 37.228.129.24;
 set_real_ip_from 37.228.129.63;
+set_real_ip_from 37.252.254.33;
+set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
@@ -1459,11 +1458,6 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.169.99;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.183.222.180;
-set_real_ip_from 46.183.222.181;
-set_real_ip_from 46.183.222.183;
-set_real_ip_from 46.183.222.184;
-set_real_ip_from 46.183.222.185;
 set_real_ip_from 46.195.112.152;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
@@ -1537,7 +1531,6 @@ set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
-set_real_ip_from 62.182.82.143;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 66.146.193.33;
@@ -1645,6 +1638,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
@@ -1671,7 +1665,6 @@ set_real_ip_from 94.103.124.184;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
-set_real_ip_from 94.158.246.240;
 set_real_ip_from 94.16.112.22;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.226;
@@ -1690,7 +1683,6 @@ set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.141.35.21;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
-set_real_ip_from 95.154.196.24;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
