--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -112,7 +112,6 @@ allow 109.70.100.71;
 allow 114.199.75.111;
 allow 118.163.74.160;
 allow 125.212.241.131;
-allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
@@ -166,7 +165,6 @@ allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
 allow 162.247.74.74;
-allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
@@ -214,6 +212,7 @@ allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
+allow 178.30.78.30;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -917,7 +916,6 @@ allow 2603:3:610c:7640::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
-allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:2700:0:2:a800:ff:fe47:e25f;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1328,6 +1326,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
+allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
@@ -1389,6 +1388,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
+allow 44.218.90.193;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
@@ -1452,12 +1452,12 @@ allow 45.95.169.225;
 allow 45.95.169.226;
 allow 45.95.169.227;
 allow 45.95.169.228;
+allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 45.95.169.99;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.195.112.152;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1480,7 +1480,6 @@ allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
-allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.138.51;
 allow 51.89.153.112;
@@ -1525,7 +1524,6 @@ allow 54.36.101.21;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.88.161.240;
 allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
@@ -1636,6 +1634,7 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
+allow 91.210.59.57;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
