--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -151,7 +151,6 @@ deny 2603:3:610c:7640::;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
-deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:2700:0:2:a800:ff:fe47:e25f;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
@@ -561,6 +560,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
+deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
