--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -112,7 +112,6 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
@@ -166,7 +165,6 @@ set_real_ip_from 162.247.74.217;
 set_real_ip_from 162.247.74.27;
 set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.247.74.74;
-set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.213.212;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
@@ -214,6 +212,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
 set_real_ip_from 178.236.247.122;
+set_real_ip_from 178.30.78.30;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -917,7 +916,6 @@ set_real_ip_from 2603:3:610c:7640::;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
-set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe47:e25f;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1328,6 +1326,7 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:d602:1:14bc::2;
@@ -1389,6 +1388,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.218.90.193;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
@@ -1452,12 +1452,12 @@ set_real_ip_from 45.95.169.225;
 set_real_ip_from 45.95.169.226;
 set_real_ip_from 45.95.169.227;
 set_real_ip_from 45.95.169.228;
+set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.169.99;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.195.112.152;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1480,7 +1480,6 @@ set_real_ip_from 51.75.64.23;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
-set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
@@ -1525,7 +1524,6 @@ set_real_ip_from 54.36.101.21;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 54.88.161.240;
 set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
@@ -1636,6 +1634,7 @@ set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
+set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
