Update lists at 20240228-0001

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -19,7 +19,6 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:801:2000::2b97;
-allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -113,7 +112,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:634:2177::1;
@@ -151,6 +149,7 @@ allow 2603:3:610c:7640::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:2700:0:2:a800:ff:fe47:e25f;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -252,7 +251,6 @@ allow 2a00:1169:117:5510::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
-allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:1d1f:b701;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -441,7 +439,6 @@ allow 2a0b:f4c2:1::140;
 allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
-allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
@@ -502,9 +499,41 @@ allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
+allow 2a0b:f4c2:2::32;
+allow 2a0b:f4c2:2::33;
+allow 2a0b:f4c2:2::34;
+allow 2a0b:f4c2:2::35;
+allow 2a0b:f4c2:2::36;
+allow 2a0b:f4c2:2::37;
+allow 2a0b:f4c2:2::38;
+allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
+allow 2a0b:f4c2:2::40;
+allow 2a0b:f4c2:2::41;
+allow 2a0b:f4c2:2::42;
+allow 2a0b:f4c2:2::43;
+allow 2a0b:f4c2:2::44;
+allow 2a0b:f4c2:2::45;
+allow 2a0b:f4c2:2::46;
+allow 2a0b:f4c2:2::47;
+allow 2a0b:f4c2:2::48;
+allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
+allow 2a0b:f4c2:2::50;
+allow 2a0b:f4c2:2::51;
+allow 2a0b:f4c2:2::52;
+allow 2a0b:f4c2:2::53;
+allow 2a0b:f4c2:2::54;
+allow 2a0b:f4c2:2::55;
+allow 2a0b:f4c2:2::56;
+allow 2a0b:f4c2:2::57;
+allow 2a0b:f4c2:2::58;
+allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
+allow 2a0b:f4c2:2::60;
+allow 2a0b:f4c2:2::61;
+allow 2a0b:f4c2:2::62;
+allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
@@ -586,6 +615,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -600,7 +630,7 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c80b::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c820::2;
-allow 2a12:5940:d0e2::2;
+allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
