--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -110,8 +110,8 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
-deny 118.163.74.160;
 deny 125.212.241.131;
+deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
@@ -165,6 +165,7 @@ deny 162.247.74.217;
 deny 162.247.74.27;
 deny 162.247.74.7;
 deny 162.247.74.74;
+deny 162.251.5.152;
 deny 163.172.213.212;
 deny 163.172.45.102;
 deny 163.5.143.76;
@@ -347,7 +348,6 @@ deny 185.220.101.140;
 deny 185.220.101.141;
 deny 185.220.101.142;
 deny 185.220.101.143;
-deny 185.220.101.144;
 deny 185.220.101.145;
 deny 185.220.101.146;
 deny 185.220.101.147;
@@ -414,9 +414,41 @@ deny 185.220.101.29;
 deny 185.220.101.3;
 deny 185.220.101.30;
 deny 185.220.101.31;
+deny 185.220.101.32;
+deny 185.220.101.33;
+deny 185.220.101.34;
+deny 185.220.101.35;
+deny 185.220.101.36;
+deny 185.220.101.37;
+deny 185.220.101.38;
+deny 185.220.101.39;
 deny 185.220.101.4;
+deny 185.220.101.40;
+deny 185.220.101.41;
+deny 185.220.101.42;
+deny 185.220.101.43;
+deny 185.220.101.44;
+deny 185.220.101.45;
+deny 185.220.101.46;
+deny 185.220.101.47;
+deny 185.220.101.48;
+deny 185.220.101.49;
 deny 185.220.101.5;
+deny 185.220.101.50;
+deny 185.220.101.51;
+deny 185.220.101.52;
+deny 185.220.101.53;
+deny 185.220.101.54;
+deny 185.220.101.55;
+deny 185.220.101.56;
+deny 185.220.101.57;
+deny 185.220.101.58;
+deny 185.220.101.59;
 deny 185.220.101.6;
+deny 185.220.101.60;
+deny 185.220.101.61;
+deny 185.220.101.62;
+deny 185.220.101.63;
 deny 185.220.101.64;
 deny 185.220.101.65;
 deny 185.220.101.66;
@@ -684,7 +716,6 @@ deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:801:2000::2b97;
-deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
@@ -778,7 +809,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:634:2177::1;
@@ -830,7 +860,6 @@ deny 217.12.215.167;
 deny 217.12.221.131;
 deny 217.146.2.41;
 deny 217.160.88.146;
-deny 217.27.189.205;
 deny 23.137.248.100;
 deny 23.137.248.139;
 deny 23.137.248.152;
@@ -916,6 +945,7 @@ deny 2603:3:610c:7640::;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
+deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:2700:0:2:a800:ff:fe47:e25f;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1018,7 +1048,6 @@ deny 2a00:1169:117:5510::;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
-deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:1d1f:b701;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -1207,7 +1236,6 @@ deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::141;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
-deny 2a0b:f4c2:1::144;
 deny 2a0b:f4c2:1::145;
 deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
@@ -1268,9 +1296,41 @@ deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
+deny 2a0b:f4c2:2::32;
+deny 2a0b:f4c2:2::33;
+deny 2a0b:f4c2:2::34;
+deny 2a0b:f4c2:2::35;
+deny 2a0b:f4c2:2::36;
+deny 2a0b:f4c2:2::37;
+deny 2a0b:f4c2:2::38;
+deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
+deny 2a0b:f4c2:2::40;
+deny 2a0b:f4c2:2::41;
+deny 2a0b:f4c2:2::42;
+deny 2a0b:f4c2:2::43;
+deny 2a0b:f4c2:2::44;
+deny 2a0b:f4c2:2::45;
+deny 2a0b:f4c2:2::46;
+deny 2a0b:f4c2:2::47;
+deny 2a0b:f4c2:2::48;
+deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
+deny 2a0b:f4c2:2::50;
+deny 2a0b:f4c2:2::51;
+deny 2a0b:f4c2:2::52;
+deny 2a0b:f4c2:2::53;
+deny 2a0b:f4c2:2::54;
+deny 2a0b:f4c2:2::55;
+deny 2a0b:f4c2:2::56;
+deny 2a0b:f4c2:2::57;
+deny 2a0b:f4c2:2::58;
+deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
+deny 2a0b:f4c2:2::60;
+deny 2a0b:f4c2:2::61;
+deny 2a0b:f4c2:2::62;
+deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
@@ -1352,6 +1412,7 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:1fc0:3::4289:69b8;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
@@ -1366,7 +1427,7 @@ deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c80b::2;
 deny 2a12:5940:c814::2;
 deny 2a12:5940:c820::2;
-deny 2a12:5940:d0e2::2;
+deny 2a12:5940:c826::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
@@ -1377,18 +1438,14 @@ deny 31.220.87.46;
 deny 31.220.98.139;
 deny 35.0.127.52;
 deny 37.120.166.23;
-deny 37.187.5.192;
 deny 37.228.129.128;
 deny 37.228.129.131;
 deny 37.228.129.24;
 deny 37.228.129.63;
-deny 37.252.254.33;
-deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.239.62;
 deny 38.97.116.244;
-deny 44.218.90.193;
 deny 45.128.232.102;
 deny 45.128.232.170;
 deny 45.132.246.245;
@@ -1425,7 +1482,6 @@ deny 45.151.167.11;
 deny 45.151.167.12;
 deny 45.151.167.13;
 deny 45.15.157.177;
-deny 45.15.158.165;
 deny 45.15.158.39;
 deny 45.33.15.243;
 deny 45.56.81.190;
@@ -1513,6 +1569,7 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
+deny 54.165.249.98;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1635,6 +1692,7 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
+deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
@@ -1669,6 +1727,7 @@ deny 94.177.106.37;
 deny 94.177.106.46;
 deny 94.177.106.55;
 deny 94.177.106.59;
+deny 94.228.163.25;
 deny 94.228.169.70;
 deny 94.230.208.147;
 deny 94.230.208.148;
