Update lists at 20240228-1201

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -434,7 +434,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:1:1a::1;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
@@ -658,6 +657,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
