--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -21,6 +22,7 @@ set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.219.236.101;
+set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -113,7 +115,6 @@ set_real_ip_from 114.199.75.111;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
-set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
@@ -151,7 +152,6 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 156.146.63.135;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.241.121.139;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
@@ -215,7 +215,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.30.78.30;
+set_real_ip_from 178.31.138.5;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -1274,7 +1274,6 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
-set_real_ip_from 2a06:1700:1:1a::1;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1498,6 +1497,7 @@ set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:1fc0:3::4289:69b8;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1522,12 +1522,11 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 3.229.94.66;
+set_real_ip_from 34.195.95.120;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.187.5.192;
-set_real_ip_from 37.228.129.24;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
@@ -1779,6 +1778,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
@@ -1824,7 +1824,6 @@ set_real_ip_from 95.141.35.21;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.164.46.204;
-set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.27.198.133;
