--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -21,6 +22,7 @@ allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.219.236.101;
+allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -113,7 +115,6 @@ allow 114.199.75.111;
 allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
-allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
@@ -151,7 +152,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.135;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.241.121.139;
 allow 162.247.72.192;
 allow 162.247.72.199;
@@ -215,7 +215,7 @@ allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
-allow 178.30.78.30;
+allow 178.31.138.5;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -1274,7 +1274,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:1:1a::1;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
@@ -1498,6 +1497,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1522,12 +1522,11 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.229.94.66;
+allow 34.195.95.120;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.187.5.192;
-allow 37.228.129.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
@@ -1779,6 +1778,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1824,7 +1824,6 @@ allow 95.141.35.21;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.46.204;
-allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
