--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -229,7 +229,6 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.214.117.242;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -549,7 +548,6 @@ allow 185.67.82.114;
 allow 185.70.8.45;
 allow 185.70.8.46;
 allow 185.7.33.146;
-allow 185.82.127.128;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 185.86.148.90;
@@ -827,7 +825,6 @@ allow 2001:bc8:634:2177::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 202.139.229.157;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.69.76.36;
@@ -867,6 +864,7 @@ allow 213.136.84.104;
 allow 213.232.235.83;
 allow 213.252.140.118;
 allow 213.95.149.22;
+allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.215.167;
@@ -1091,6 +1089,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:b500:408:3100::1;
+allow 2607:f530:8002::19;
 allow 2607:f598:b310:221:4a46:4699:8ef:ab51;
 allow 2620:18c:0:192::130;
 allow 2620:18c:0:192::131;
@@ -1171,7 +1170,6 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
-allow 2a02:7aa0:5000::1ec;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2161:161::1;
@@ -1507,6 +1505,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1615,6 +1614,7 @@ allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.243.74.136;
 allow 47.245.106.151;
+allow 50.16.151.14;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.227.109;
@@ -1716,7 +1716,6 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.19.137.127;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
@@ -1789,6 +1788,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
