--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -243,6 +243,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
 deny 2607:b500:408:3100::1;
+deny 2607:f530:8002::19;
 deny 2607:f598:b310:221:4a46:4699:8ef:ab51;
 deny 2620:18c:0:192::130;
 deny 2620:18c:0:192::131;
@@ -322,7 +323,6 @@ deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
-deny 2a02:7aa0:5000::1ec;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c206:2161:161::1;
@@ -658,6 +658,7 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:1fc0:3::4289:69b8;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
