--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -229,7 +229,6 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.214.117.242;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -549,7 +548,6 @@ set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.70.8.45;
 set_real_ip_from 185.70.8.46;
 set_real_ip_from 185.7.33.146;
-set_real_ip_from 185.82.127.128;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 185.84.31.254;
 set_real_ip_from 185.86.148.90;
@@ -827,7 +825,6 @@ set_real_ip_from 2001:bc8:634:2177::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-set_real_ip_from 202.139.229.157;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
@@ -867,6 +864,7 @@ set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.232.235.83;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
+set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.215.167;
@@ -1091,6 +1089,7 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:b500:408:3100::1;
+set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:f598:b310:221:4a46:4699:8ef:ab51;
 set_real_ip_from 2620:18c:0:192::130;
 set_real_ip_from 2620:18c:0:192::131;
@@ -1171,7 +1170,6 @@ set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
-set_real_ip_from 2a02:7aa0:5000::1ec;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c206:2161:161::1;
@@ -1507,6 +1505,7 @@ set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:1fc0:3::4289:69b8;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1615,6 +1614,7 @@ set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
 set_real_ip_from 47.243.74.136;
 set_real_ip_from 47.245.106.151;
+set_real_ip_from 50.16.151.14;
 set_real_ip_from 50.3.182.133;
 set_real_ip_from 50.3.182.156;
 set_real_ip_from 51.15.227.109;
@@ -1716,7 +1716,6 @@ set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.19.137.127;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
@@ -1789,6 +1788,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
