Update lists at 20240301-0601

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -133,6 +133,7 @@ allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:96f9::1;
 allow 2602:fc24:11:aabe::1;
+allow 2602:fc24:11:e75d::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
@@ -681,4 +682,5 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
+allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
