--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -133,6 +133,7 @@ deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:66c4::1;
 deny 2602:fc24:11:96f9::1;
 deny 2602:fc24:11:aabe::1;
+deny 2602:fc24:11:e75d::1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
@@ -681,4 +682,5 @@ deny 2a12:5940:d0e2::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
+deny 2a12:8641:3:38::;
 deny 2a12:a800:2:1:45:138:16:203;
