--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -20,7 +21,6 @@ set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -113,10 +113,10 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
+set_real_ip_from 130.204.161.3;
 set_real_ip_from 13.201.165.5;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 135.125.55.237;
@@ -151,6 +151,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.241.121.139;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
@@ -215,7 +216,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.31.138.5;
+set_real_ip_from 178.31.138.37;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -811,7 +812,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -1496,6 +1496,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1522,6 +1523,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.187.5.192;
@@ -1530,6 +1532,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
+set_real_ip_from 3.84.56.48;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1585,7 +1588,6 @@ set_real_ip_from 45.9.148.219;
 set_real_ip_from 45.9.150.103;
 set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
-set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.95.169.184;
 set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
@@ -1634,7 +1636,6 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.207.158.39;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.101.10;
@@ -1787,6 +1788,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
