Update lists at 20240303-0001

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,4 +1,3 @@
-deny 100.25.244.1;
 deny 102.130.113.9;
 deny 102.130.127.117;
 deny 103.106.3.94;
@@ -112,6 +111,7 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
+deny 118.163.74.160;
 deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
@@ -235,6 +235,7 @@ deny 185.100.85.22;
 deny 185.100.85.23;
 deny 185.100.85.24;
 deny 185.100.85.25;
+deny 185.100.86.128;
 deny 185.100.87.136;
 deny 185.100.87.139;
 deny 185.100.87.174;
@@ -812,6 +813,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:634:2177::1;
@@ -855,6 +857,7 @@ deny 212.73.134.204;
 deny 212.95.50.77;
 deny 213.136.84.104;
 deny 213.232.235.83;
+deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
 deny 216.73.159.101;
@@ -1150,6 +1153,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
+deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -1493,6 +1497,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
@@ -1518,6 +1523,7 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
+deny 3.234.101.241;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1735,6 +1741,7 @@ deny 84.247.165.53;
 deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
+deny 85.204.116.211;
 deny 85.204.116.88;
 deny 85.209.176.103;
 deny 85.215.76.62;
@@ -1781,6 +1788,7 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
+deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
@@ -1828,5 +1836,4 @@ deny 95.211.210.103;
 deny 95.211.244.28;
 deny 95.211.7.148;
 deny 96.27.198.133;
-deny 96.42.26.63;
 deny 96.66.15.152;
