--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.25.244.1;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 103.106.3.94;
@@ -112,6 +111,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
@@ -235,6 +235,7 @@ set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
 set_real_ip_from 185.100.85.24;
 set_real_ip_from 185.100.85.25;
+set_real_ip_from 185.100.86.128;
 set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.139;
 set_real_ip_from 185.100.87.174;
@@ -812,6 +813,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -855,6 +857,7 @@ set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.232.235.83;
+set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
@@ -1150,6 +1153,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
+set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 set_real_ip_from 2a02:13f0:8100:6:6bc:499d:b353:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1493,6 +1497,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1518,6 +1523,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 3.234.101.241;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1735,6 +1741,7 @@ set_real_ip_from 84.247.165.53;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
+set_real_ip_from 85.204.116.211;
 set_real_ip_from 85.204.116.88;
 set_real_ip_from 85.209.176.103;
 set_real_ip_from 85.215.76.62;
@@ -1781,6 +1788,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
@@ -1828,5 +1836,4 @@ set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
-set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
