Update lists at 20240304-0300

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -311,6 +311,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
