--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -194,6 +195,7 @@ allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.126.253.190;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 178.162.201.165;
 allow 178.170.37.11;
 allow 178.17.170.23;
@@ -1143,6 +1145,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1522,7 +1525,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
-allow 44.209.44.84;
+allow 44.194.238.185;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1627,6 +1630,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1716,6 +1720,7 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
