--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -311,6 +311,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
