--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -194,6 +195,7 @@ set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 178.162.201.165;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.23;
@@ -1143,6 +1145,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1522,7 +1525,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
-set_real_ip_from 44.209.44.84;
+set_real_ip_from 44.194.238.185;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1627,6 +1630,7 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1716,6 +1720,7 @@ set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
 set_real_ip_from 82.221.139.190;
+set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
