--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -200,6 +200,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 178.162.201.165;
 allow 178.170.37.11;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -843,6 +844,7 @@ allow 208.109.36.224;
 allow 209.141.40.44;
 allow 209.141.46.203;
 allow 209.141.50.178;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -857,6 +859,7 @@ allow 213.232.235.83;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
+allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.215.167;
 allow 217.12.221.131;
@@ -945,6 +948,7 @@ allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
+allow 23.23.119.206;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1002,6 +1006,7 @@ allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 allow 2605:6400:20:104e::2;
+allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1134,6 +1139,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:1c00::1cd;
@@ -1525,7 +1531,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
-allow 44.221.207.198;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
