--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -170,6 +170,7 @@ allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 allow 2605:6400:20:104e::2;
+allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -301,6 +302,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:1c00::1cd;
